# 3D-Reconstruction-Space-Carving

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  shared_lib.cpp  shared_lib.h
examples/1.cube_with_off_origin/: rotated_cube.ply
mechanical_part/: part.ply
src/: api.cpp  api.h  argparse.hpp  bmplib.h  main.cpp  params.cpp  params.h  types.h  utils.cpp  utils.h
